--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -107,6 +107,16 @@
       z-index: 1;
     }
 
+    .hero-image {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: 1;
+    }
+
     &.active {
       opacity: 1;
       visibility: visible;
