fixed footer logo issue

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -40,10 +40,10 @@
 
       .footer-brand {
         .brand-logo {
-          margin-bottom: 24px;
+          // margin-bottom: 24px;
 
           .logo-image {
-            height: 72px;
+            height: 160px;
             width: auto;
             transition: all 0.3s ease;
 
